--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -7,7 +7,7 @@
             <div class="header p-2 py-0 pt-1">
               <!-- Purchase all Supplier Wise-->
               <div *ngIf="this.id === '0'" class="row mb-5">
-                <div class="col-lg-2 col-md-2 col-5 p-0 ms-3">
+                <div class="col-xl-1 col-lg-2 col-md-2 col-5 p-0 ms-3">
                   <h2>Purchase
                     <button class="bg-none" (click)="exportAsXLSX()">
                       <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
