--- a/web1/src/app/inventory/supplier/supplier.component.css
+++ b/web1/src/app/inventory/supplier/supplier.component.css
@@ -10,3 +10,13 @@
     padding: 0;
     height: 35px;
   }
+
+button:disabled .edit_icon {
+    background-color: #bdbdbd;
+    color: #878787;
+}
+
+button:disabled .delete_icon {
+    background-color: #bdbdbd;
+    color: #878787;
+}
