--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -70,7 +70,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label> Name</mat-label>
                                                 <input matInput min="3" [(ngModel)]="data.Name" name="Name"
-                                                (input)="customerSearch(UserNamecontrol.value, 'Name')" required
+                                                (input)="customerSearch(UserNamecontrol.value, 'Name')" (blur)="closeSearchList()" required
                                                 #UserNamecontrol>
                                                 <mat-error>
                                                     Name is required
@@ -89,7 +89,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Mobile No1</mat-label>
                                                 <input matInput name="MobileNo1" type="number"
-                                                    [(ngModel)]="data.MobileNo1"  (input)="customerSearch(MobileNo1control.value, 'MobileNo1')" #MobileNo1control />
+                                                    [(ngModel)]="data.MobileNo1"  (input)="customerSearch(MobileNo1control.value, 'MobileNo1')" (blur)="closeSearchList()" #MobileNo1control />
                                             </mat-form-field> 
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-4 mb-0">
@@ -119,7 +119,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Address</mat-label>
                                                 <input matInput name="Address" minlength="2" [(ngModel)]="data.Address"
-                                                (input)="customerSearch(Addresscontrol.value, 'Address')"  #Addresscontrol />
+                                                (input)="customerSearch(Addresscontrol.value, 'Address')" (blur)="closeSearchList()"  #Addresscontrol />
                                                 <mat-error>
                                                     Atleast 2 characters required
                                                 </mat-error>
@@ -129,7 +129,7 @@
                                         <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>SR/MRD No. </mat-label>
-                                                <input matInput name="Sno" [(ngModel)]="data.Sno"  (input)="customerSearch(Snocontrol.value, 'Sno')" #Snocontrol />
+                                                <input matInput name="Sno" [(ngModel)]="data.Sno"  (input)="customerSearch(Snocontrol.value, 'Sno')" (blur)="closeSearchList()" #Snocontrol />
                                                 <mat-error>
                                                     SR/MRD No. is required
                                                 </mat-error>
@@ -379,22 +379,24 @@
                                                 <!-- Near input box end -->
 
                                                 <div class="row mt-1 powerRow">
-                                                    <div class="col-3 p-0 ps-2">
-                                                        <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Rx By</mat-label>
-                                                            <input matInput class="inputWidth" type="text"
-                                                                name="RefferedByDoc"
-                                                                [(ngModel)]="spectacle.RefferedByDoc" id="RefferedByDoc"
-                                                                list="docList">
-                                                            <datalist id="docList">
-                                                                <option value="Self">Self</option>
-                                                                <option *ngFor="let doc of docList let i = index;"
-                                                                    [value]="doc.Name">
-                                                                    {{doc.Name}}
-                                                                </option>
-                                                            </datalist>
-                                                        </mat-form-field>
-                                                    </div>
+                                                        <div *ngIf="!showDoctorAdd" class="col-md-2 col-4 col-12 mb-0">
+                                                            <mat-form-field class="example-full-width mb-0">
+                                                                <mat-label>Rx By Doc</mat-label>
+                                                                <mat-select name="Field Type" [(ngModel)]="spectacle.RefferedByDoc"  #Typecontrol>
+                                                                    <mat-option *ngFor="let doc of docList let i = index;" [value]="doc.Name">
+                                                                        {{doc.Name}}
+                                                                    </mat-option>
+                                                                </mat-select>
+                                                                <mat-error>
+                                                                    Select Doctor
+                                                                </mat-error>
+                                                            </mat-form-field>
+                                                        </div>
+                                                        <div *ngIf="!showDoctorAdd" class="col-md-1 col-4 b-0">
+                                                            <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: this.id}"  aria-label="Example icon button with a bookmark icon">
+                                                            <mat-icon>add</mat-icon>
+                                                        </button>
+                                                        </div>
                                                     <div class="col-1 p-0 ps-1">
                                                         <mat-form-field class="example-full-width mb-0">
                                                             <mat-label>PD_R</mat-label>
@@ -743,20 +745,23 @@
                                                 </div>
                                                 <!-- Near input box end -->
                                                 <div class="row mt-1 powerRow">
-                                                    <div class="col-3 p-0 ps-2">
+                                                    <div *ngIf="!showDoctorAdd" class="col-md-2 col-4 col-12 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Rx By</mat-label>
-                                                            <input matInput class="inputWidth" type="text"
-                                                                name="CRefferedByDoc" [(ngModel)]="clens.RefferedByDoc"
-                                                                id="CRefferedByDoc" list="CdocList">
-                                                            <datalist id="CdocList">
-                                                                <option value="Self">Self</option>
-                                                                <option *ngFor="let doc of docList let i = index;"
-                                                                    [value]="doc.Name">
+                                                            <mat-label>Rx By Doc</mat-label>
+                                                            <mat-select name="Field Type" [(ngModel)]="clens.RefferedByDoc"  #Typecontrol>
+                                                                <mat-option *ngFor="let doc of docList let i = index;" [value]="doc.Name">
                                                                     {{doc.Name}}
-                                                                </option>
-                                                            </datalist>
+                                                                </mat-option>
+                                                            </mat-select>
+                                                            <mat-error>
+                                                                Select Doctor
+                                                            </mat-error>
                                                         </mat-form-field>
+                                                    </div>
+                                                    <div *ngIf="!showDoctorAdd" class="col-md-1 col-4 b-0">
+                                                        <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: this.id}"  aria-label="Example icon button with a bookmark icon">
+                                                            <mat-icon>add</mat-icon>
+                                                    </button>
                                                     </div>
                                                     <div class="col-1 p-0 ps-1">
                                                         <mat-form-field class="example-full-width mb-0">
@@ -1006,14 +1011,11 @@
                                                             </mat-select>
                                                         </mat-form-field>
                                                     </div>
-                                                    <div class="col-md-3">
+                                                    <div *ngIf="!showDoctorAdd" class="col-md-2 col-4 col-12 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Reffered By Doc</mat-label>
-                                                            <mat-select name="Field Type"
-                                                                [(ngModel)]="other.RefferedByDoc" required #Typecontrol>
-                                                                <mat-option [value]=""></mat-option>
-                                                                <mat-option *ngFor="let doc of docList let i = index;"
-                                                                    [value]="doc.Name">
+                                                            <mat-label>Rx By Doc</mat-label>
+                                                            <mat-select name="Field Type" [(ngModel)]="other.RefferedByDoc"  #Typecontrol>
+                                                                <mat-option *ngFor="let doc of docList let i = index;" [value]="doc.Name">
                                                                     {{doc.Name}}
                                                                 </mat-option>
                                                             </mat-select>
@@ -1021,6 +1023,11 @@
                                                                 Select Doctor
                                                             </mat-error>
                                                         </mat-form-field>
+                                                    </div>
+                                                    <div *ngIf="!showDoctorAdd" class="col-md-1 col-4 b-0">
+                                                        <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: this.id}"  aria-label="Example icon button with a bookmark icon">
+                                                            <mat-icon>add</mat-icon>
+                                                    </button>
                                                     </div>
                                                     <div class="col-md-3 mb-0" style="margin: 0; ">
                                                         <mat-form-field class="example-full-width mb-0">
