--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1071,7 +1071,7 @@
                                 <mat-label>Payment Type</mat-label>
                                 <mat-select name="CreditType" [(ngModel)]="applyPayment.CreditType" required #GSTTypecontrol1>
                                     <mat-option value="Credit">Credit </mat-option>
-                                    <mat-option value="Debit">Debit </mat-option>
+                                    <!-- <mat-option value="Debit">Debit </mat-option> -->
                                 </mat-select>
                             </mat-form-field>
                         </div>
