--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -405,8 +405,8 @@
                     </mat-form-field>
                 </div>
                 <div *ngIf="addCustomerBill" class="col-xl-1 col-lg-1 col-md-1 col-sm-12 mb-0 mb-3  ms-auto">
-                    <button *ngIf="BillItem.Manual === false && BillItem.PreOrder === false" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0 || this.GstTypeDis || this.BillItem.Barcode === null" mat-raised-button color="primary" (click)="calculations('GSTPercentage', 'gst');notifyGst();">Add</button>
-                    <button *ngIf="BillItem.PreOrder" type="submit"  [disabled]="!f1.valid || this.GstTypeDis  || this.BillItem.Quantity === 0"  mat-raised-button color="primary">PreOder</button>
+                    <button *ngIf="BillItem.Manual === false &&  BillItem.PreOrder === false" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0 || this.GstTypeDis || this.BillItem.Barcode === null" mat-raised-button color="primary" (click)="calculations('GSTPercentage', 'gst');notifyGst();">Add</button>
+                    <button *ngIf=" BillItem.PreOrder === true" type="submit"  [disabled]="!f1.valid || this.GstTypeDis  || this.BillItem.Quantity === 0"  mat-raised-button color="primary">PreOder</button>
                     <button *ngIf="BillItem.Manual" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0 || this.GstTypeDis "   mat-raised-button color="primary">Manual</button>
                 </div>
             </div>
