--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -6,7 +6,7 @@
                 <div class="card">
                     <div class="header p-0 py-0 pt-1">
                         <div class="row">
-                            <div class="col-lg-2 col-md-2 col-4 p-0 ms-3">
+                            <div class="col-xl-1 col-lg-2 col-md-2 col-4 p-0 ms-3">
                                 <h2>Expense List </h2>
                             </div>
                             <div class="ps-md-0 ps-0 pt-1" style="width: 40px;">
