--- a/web1/src/app/sale/bill-list/bill-list.component.css
+++ b/web1/src/app/sale/bill-list/bill-list.component.css
@@ -118,5 +118,22 @@
   font-weight: bolder;float: left;
 }
 
+.email {
+  font-size: 20px;
+  background: #f71a1c;
+  border: none;
+  border-radius: 5px;
+  padding: 7px 6px;
+  color: #fff;
+  box-shadow: 1px 1px 10px #0003;
+}
 
-
+.whatsapp {
+  font-size: 20px;
+  background: #72ff55;
+  border: none;
+  border-radius: 5px;
+  padding: 6px;
+  color: #fff;
+  box-shadow: 1px 1px 10px #0003;
+}
