--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -396,7 +396,7 @@
           </mat-form-field>
         </div>
 
-        <div class="col-md-1 mb-0">
+        <div class="col-md-2 mb-0">
           <mat-form-field class="example-full-width mb-0">
             <mat-label>New Payment</mat-label>
             <input type="number" min="0" style="font-size: 17px !important;" matInput name="PaymentAmount"
@@ -424,15 +424,15 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="col-md-2 mb-0">
+        <!-- <div class="col-md-2 mb-0">
           <mat-form-field class="example-full-width mb-0">
             <mat-label>Payment Type</mat-label>
             <mat-select name="CreditType" [(ngModel)]="applyPayment.CreditType" required #GSTTypecontrol1>
               <mat-option value="Credit">Credit </mat-option>
-              <!-- <mat-option value="Debit">Debit </mat-option> -->
+              <mat-option value="Debit">Debit </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+        </div> -->
         <div class="col-md-2 mb-0">
           <mat-form-field class="example-full-width mb-0">
             <mat-label> Card No.</mat-label>
@@ -443,7 +443,7 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div class="col-md-2 mb-0">
+        <div class="col-md-3 mb-0">
           <mat-form-field class="example-full-width mb-0">
             <mat-label>Reference</mat-label>
             <input style="font-size: 17px !important;" matInput name="NamePay"
