--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -70,7 +70,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label> Name</mat-label>
                                                 <input matInput min="3" [(ngModel)]="data.Name" name="Name"
-                                                (input)="customerSearch(UserNamecontrol.value, 'Name');closeSearchList()"  required
+                                                (input)="customerSearch(UserNamecontrol.value, 'Name')"   required
                                                 #UserNamecontrol>
                                                 <mat-error>
                                                     Name is required
@@ -89,7 +89,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Mobile No1</mat-label>
                                                 <input matInput name="MobileNo1" type="number"
-                                                    [(ngModel)]="data.MobileNo1"  (input)="customerSearch(MobileNo1control.value, 'MobileNo1');closeSearchList()" #MobileNo1control />
+                                                    [(ngModel)]="data.MobileNo1"  (input)="customerSearch(MobileNo1control.value, 'MobileNo1')" #MobileNo1control />
                                             </mat-form-field> 
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-4 mb-0">
@@ -119,7 +119,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Address</mat-label>
                                                 <input matInput name="Address" minlength="2" [(ngModel)]="data.Address"
-                                                (input)="customerSearch(Addresscontrol.value, 'Address');closeSearchList()"  #Addresscontrol />
+                                                (input)="customerSearch(Addresscontrol.value, 'Address')"  #Addresscontrol />
                                                 <mat-error>
                                                     Atleast 2 characters required
                                                 </mat-error>
@@ -129,7 +129,7 @@
                                         <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>SR/MRD No. </mat-label>
-                                                <input matInput name="Sno" [(ngModel)]="data.Sno"  (input)="customerSearch(Snocontrol.value, 'Sno');closeSearchList()" #Snocontrol />
+                                                <input matInput name="Sno" [(ngModel)]="data.Sno"  (input)="customerSearch(Snocontrol.value, 'Sno')" #Snocontrol />
                                                 <mat-error>
                                                     SR/MRD No. is required
                                                 </mat-error>
